# minimost

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  LICENSE  README.md  SECURITY.md  STIG-COMPLIANCE.md  auth.py  call.py  channels.json  chat.py  clean.py  common.py  database.py  email_utils.py  eslint.config.mjs  gen_ssl_cert.sh  gunicorn.conf.py  minimost.py  minimost.service  minimost.spec  package-lock.json  package.json  presence.py  pyproject.toml  settings.json  setup.cfg  sonar-project.properties  test.py
.copr/: Makefile  gen-changelog.sh
.github/workflows/: bandit.yml  build.yml  codeql.yml  docs.yml  eslint.yml  pip-audit.yml  prettier.yml  publish.yml  rpm.yml  ruff.yml  semgrep.yml  sonar.yml  windows.yml  zap.yml
docs/: Makefile  administration.rst  api_reference.rst  architecture.rst  conf.py  configuration.rst  deployment.rst  frontend.rst  index.rst  installation.rst  keyboard_shortcuts.rst  overview.rst  security.rst  stig_compliance.rst
docs/api/: audit.rst  auth.rst  calls.rst  chat.rst  clean.rst  common.rst  database.rst  events.rst  index.rst  minimost.rst  presence.rst  preview.rst  ratelimit.rst  stun.rst
src/minimost/: __init__.py  __main__.py  _pki.py  _version.py  audit.py  auth.py  calls.py  certs.py  chat.py  clean.py  common.py  database.py  events.py  gunicorn_conf.py  paths.py  presence.py  preview.py  ratelimit.py  settings.json  stun.py
src/minimost/static/: audio-processor.js  auth-password-field.js  auth-password-rules.js  auth.css  chat-calls.js  chat-channels.js  chat-dm.js  chat-events.js  chat-mentions.js  chat-reactions.js  chat-search.js  chat-settings.js  chat-sidebar.js  site.webmanifest  styles.css  sw.js
src/minimost/templates/: _assets.html  _password_fields.html  about.html  chat.html  error.html  forgot_password.html  login.html  reset_password.html  signup.html
static/: auth.css  site.webmanifest  styles.css
templates/: chat.html  forgot_password.html  login.html  reset_confirm.html  reset_done.html  signup.html
tests/: conftest.py  test_audit.py  test_auth_helpers.py  test_chat_helpers.py  test_clean.py  test_common.py  test_coverage_gaps.py  test_dependencies.py  test_error_handlers.py  test_init_and_main.py  test_password_policy.py  test_pki.py  test_preview.py  test_python36_compat.py  test_ratelimit.py  test_routes_auth.py  test_routes_calls.py  test_routes_chat.py  test_routes_events.py  test_routes_leave_csrf.py  test_routes_presence.py  test_routes_private_channels.py  test_routes_reset_password.py  test_routes_settings_avatars.py  test_session_security.py  test_stun.py  test_windows_compat.py
tests/js/: audio-processor.test.js  auth-password-field.test.js  auth-password-rules.test.js  chat-calls.test.js  chat-channels.test.js  chat-dm.test.js  chat-events.test.js  chat-mentions.test.js  chat-reactions.test.js  chat-search.test.js  chat-settings.test.js  chat-sidebar.test.js  loadScript.js  setup-after.js  setup.js
